--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<p class="questions">
+		<blockquote>
+			<ol>
+				<li>Who was the first female to become the governor of an Indian state?</li>
+				<li>Who among first Woman to climb Mount Everest twice?</li>
+				<li>Who is President of India?</li>
+			</ol>
+		</blockquote>
+	</p>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
