--- a/main.html
+++ b/main.html
@@ -9,12 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<p class="questions">
-		<blockquote>
-			<ol>
-				<li>Who was the first female to become the governor of an Indian state?</li>
-				<li>Who among first Woman to climb Mount Everest twice?</li>
-				<li>Who is President of India?</li>
-			</ol>
+		<blockquote class="questions">
+			1.Who was the first female to become the governor of an Indian state?<br>
+			2.Who among first Woman to climb Mount Everest twice?<br>
+			3.Who is President of India?
 		</blockquote>
 	</p>
 	
