--- a/main.html
+++ b/main.html
@@ -8,13 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p class="questions">
-		<blockquote class="questions">
-			1.Who was the first female to become the governor of an Indian state?<br>
-			2.Who among first Woman to climb Mount Everest twice?<br>
-			3.Who is President of India?
-		</blockquote>
-	</p>
+	
+		<blockquote class="questions"></blockquote>
+		<p class="questions">1.Who was the first female to become the governor of an Indian state?</p>		
+		<p class="questions">2.Who among first Woman to climb Mount Everest twice?</p>	
+		<p class="questions">3.Who is President of India?</p>
+			
+		
+	
 	
     <script type="text/javascript" src="./script.js">
 </script>
