--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-		<blockquote class="questions"></blockquote>
-		<p class="questions">1.Who was the first female to become the governor of an Indian state?</p>		
-		<p class="questions">2.Who among first Woman to climb Mount Everest twice?</p>	
-		<p class="questions">3.Who is President of India?</p>
+		
+		<p class="questions"><blockquote >1.</blockquote>Who was the first female to become the governor of an Indian state?</p>		
+		<p class="questions"><blockquote>2.</blockquote>Who among first Woman to climb Mount Everest twice?</p>	
+		<p class="questions"><blockquote>3.</blockquote>Who is President of India?</p>
 			
 		
 	
