--- a/main.html
+++ b/main.html
@@ -9,10 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-		
-		<p class="questions"><blockquote >1.</blockquote>Who was the first female to become the governor of an Indian state?</p>		
-		<p class="questions"><blockquote>2.</blockquote>Who among first Woman to climb Mount Everest twice?</p>	
-		<p class="questions"><blockquote>3.</blockquote>Who is President of India?</p>
+		<blockquote >1.</blockquote>
+		<p class="questions">Who was the first female to become the governor of an Indian state?</p>		
+	<blockquote>2.</blockquote>	
+	<p class="questions">Who among first Woman to climb Mount Everest twice?</p>	
+	<blockquote>3.</blockquote>	
+	<p class="questions">Who is President of India?</p>
 			
 		
 	
