--- a/main.html
+++ b/main.html
@@ -9,12 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-		<blockquote >1.</blockquote>
-		<p class="questions">Who was the first female to become the governor of an Indian state?</p>		
-	<blockquote>2.</blockquote>	
-	<p class="questions">Who among first Woman to climb Mount Everest twice?</p>	
-	<blockquote>3.</blockquote>	
-	<p class="questions">Who is President of India?</p>
+		<p ><blockquote class="questions">1.Who was the first female to become the governor of an Indian state?</blockquote>
+		</p>		
+	<p ><blockquote class="questions">2. Who among first Woman to climb Mount Everest twice?</blockquote>	
+	</p>	
+	<p ><blockquote class="questions">3.Who is President of India?</blockquote>	
+	</p>
 			
 		
 	
