--- a/main.html
+++ b/main.html
@@ -9,12 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-		<p ><blockquote class="questions">1.Who was the first female to become the governor of an Indian state?</blockquote>
-		</p>		
-	<p ><blockquote class="questions">2. Who among first Woman to climb Mount Everest twice?</blockquote>	
-	</p>	
-	<p ><blockquote class="questions">3.Who is President of India?</blockquote>	
-	</p>
+	<p>1.<blockquote class="questions">Who was the first female to become the governor of an Indian state?</blockquote></p>				
+	<p>2. <blockquote class="questions">Who among first Woman to climb Mount Everest twice?</blockquote></p>		
+	<p>3.<blockquote class="questions">Who is President of India?</blockquote></p>	
+	
 			
 		
 	
