--- a/main.html
+++ b/main.html
@@ -9,9 +9,11 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<p>1.<blockquote class="questions">'Who was the first female to become the governor of an Indian state?'</blockquote></p>				
-	<p>2. <blockquote class="questions">'Who among first Woman to climb Mount Everest twice?'</blockquote></p>		
-	<p>3.<blockquote class="questions">'Who is President of India?'</blockquote></p>	
+	<p>
+		<blockquote class="questions">Who was the first female to become the governor of an Indian state?</blockquote>
+		<blockquote class="questions">Who among first Woman to climb Mount Everest twice?</blockquote>	
+		<blockquote class="questions">Who is President of India?</blockquote>
+	</p>	
 	
 			
 		
